I changed the collabs with pictures from flaticons

--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
                                     <div class="slide-content">
                                         <div class="item-img">
                                             <div class="item-wrapper">
-                                                <img src="assets/images/1.png" alt="Recharge logo">
+                                                <img src="assets/images/1.png" alt="Samsung logo">
                                             </div>
                                         </div>
                                     </div>
@@ -130,7 +130,7 @@
                                     <div class="slide-content">
                                         <div class="item-img">
                                             <div class="item-wrapper">
-                                                <img src="assets/images/6.png" alt="Inspire logo"
+                                                <img src="assets/images/6.png" alt="Oracle logo"
                                                     data-slide-to="1" data-bs-slide-to="1">
                                             </div>
                                         </div>
@@ -141,7 +141,7 @@
                                     <div class="slide-content">
                                         <div class="item-img">
                                             <div class="item-wrapper">
-                                                <img src="assets/images/2.png" alt="Border logo"
+                                                <img src="assets/images/2.png" alt="Siemens logo"
                                                     data-slide-to="2" data-bs-slide-to="2">
                                             </div>
                                         </div>
@@ -152,7 +152,7 @@
                                     <div class="slide-content">
                                         <div class="item-img">
                                             <div class="item-wrapper">
-                                                <img src="assets/images/4.png" alt="Sitemark logo">
+                                                <img src="assets/images/4.png" alt="Moderna logo">
                                             </div>
                                         </div>
                                     </div>
@@ -255,7 +255,7 @@
                                 to listen to my concerns and provided tailored solutions that perfectly aligned with my
                                 goals.</p>
                             <div class="img-wrapper mt-4 mb-2">
-                                <img src="assets/images/m-46.jpeg" data-slide-to="3" data-bs-slide-to="4"
+                                <img src="assets/images/m-46.jpg" data-slide-to="3" data-bs-slide-to="4"
                                     alt="a man with glasses">
                             </div>
                             <p class="card-title mbr-fonts-style display-7"><strong>Theo J.</strong></p>
